# cairn-miner

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  NOTICE  README.md  build.rs  config.example.toml  create-wallet.bat  create-wallet.sh  install-csd-miner.bat  install-csd-miner.sh  install.bat  install.ps1  install.sh  mine-all-gpus.bat  mine-all-gpus.sh  mine-auto.bat  mine-auto.sh
.github/workflows/: release.yml
dashboard/: cairn-dashboard.bat  cairn-dashboard.ps1  cairn-dashboard.sh
deploy/systemd/: cairn-miner.service  cairn-miner@.service
docs/: gpu-autotune-spec.md
hiveos/: h-config.sh  h-manifest.conf  h-run.sh  h-stats.sh  h-stop.sh  test-hiveos-hooks.sh
launcher/: Cargo.toml  build.rs
launcher/src/: autostart.rs  config.rs  devices.rs  embed.rs  engine.rs  main.rs  miner.rs  stats.rs  theme.rs
packaging/: build-hiveos-package.sh
scripts/: build-ptx.bat  build-ptx.sh
src/: backend.rs  bench.rs  coinbase.rs  config_file.rs  consensus_types.rs  endpoint.rs  hiveos.rs  keygen.rs  lib.rs  logging.rs  main.rs  mining_config.rs  selftest.rs  sha256d_cpu.rs  stats.rs  stats_server.rs
src/backends/: cpu.rs  cuda.rs  mod.rs  opencl.rs
src/kernels/: sha256d.cl  sha256d.cu  sha256d.ptx
src/stratum/: client.rs  loop_stratum.rs  mapping.rs  mod.rs  protocol.rs
worklog/: 2026-07-10-mats.md  2026-07-11-inverse-hiveos-engine-p0.md  2026-07-12-inverse-v023-batch2.md  2026-07-19-mats-part2.md  2026-07-19-mats.md  README.md
