[package]
name         = "cairn-miner-launcher"
version      = "0.2.7"
edition      = "2021"
rust-version = "1.80"
license      = "MIT OR Apache-2.0"
description  = "Native desktop launcher for cairn-miner — configure, start/stop, autostart, and watch live performance."
repository   = "https://github.com/InverseAltruism/cairn-miner"

[[bin]]
name = "cairn-miner-launcher"
path = "src/main.rs"

[dependencies]
# Native immediate-mode GUI. We pick the glow (OpenGL) renderer explicitly —
# lighter and more universally available on arbitrary Windows GPUs than the
# default wgpu — and keep the x11/wayland features so winit compiles on Linux
# (for local type-checking) as well as Windows.
eframe     = { version = "0.35", default-features = false, features = ["glow", "default_fonts", "x11", "wayland"] }
egui       = "0.35"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"

# Windows-only: registry access for the login autostart toggle.
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

# Icon: generate a .ico from the logo PNG (all hosts) and embed it (Windows).
[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
ico   = "0.5"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# Inherit the workspace release profile (lto/codegen-units) from the root.
